# ChangeLog for app-text/asciidoc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.38 2008/01/25 19:33:30 grobian Exp $

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> asciidoc-7.0.4.ebuild,
  asciidoc-7.1.2.ebuild, asciidoc-8.1.0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  16 May 2007; Greg Kroah-Hartman <gregkh@gentoo.org> asciidoc-8.1.0.ebuild:
  add ~arm, ~s390, ~sh, and ~x86-fbsd so that dev-util/tig can rely on this
  package.

  12 Mar 2007; Leonardo Boshell <leonardop@gentoo.org> metadata.xml:
  Replacing text-markup herd with the new sgml herd.

  12 Jan 2007; Robin H. Johnson <robbat2@gentoo.org> asciidoc-7.1.2.ebuild,
  asciidoc-8.1.0.ebuild:
  a2x calls xsltproc at runtime, so fix deps.

*asciidoc-8.1.0 (02 Nov 2006)

  02 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
  -asciidoc-7.0.1.ebuild, -asciidoc-7.0.1-r1.ebuild, +asciidoc-8.1.0.ebuild:
  Version bump (bug #146419). Install the HTML documentation sources. Added
  'examples' USE flag. Use the upstream installation script instead of
  copying most of the files manually.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> asciidoc-7.0.4.ebuild:
  Mark 7.0.4 stable on ia64

  05 May 2006; Joshua Jackson <tsunam@gentoo.org> asciidoc-7.0.4.ebuild:
  Stable on x86; bug #131825

  01 May 2006; <tcort@gentoo.org> asciidoc-7.0.4.ebuild:
  Stable on alpha and amd64 wrt Bug #131825.

  01 May 2006; Michael Hanselmann <hansmi@gentoo.org> asciidoc-7.0.4.ebuild:
  Stable on mips.

  01 May 2006; Markus Rothe <corsair@gentoo.org> asciidoc-7.0.4.ebuild:
  Stable on ppc64

  01 May 2006; Jason Wever <weeve@gentoo.org> asciidoc-7.0.4.ebuild:
  Stable on SPARC wrt bug #131825.

  30 Apr 2006; Rene Nussbaumer <killerfox@gentoo.org> asciidoc-7.0.4.ebuild:
  Stable on hppa, ppc.

*asciidoc-7.1.2 (23 Apr 2006)

  23 Apr 2006; Alexandre Buisse <nattfodd@gentoo.org>
  -asciidoc-7.0.2.ebuild, +asciidoc-7.1.2.ebuild: