@@ -1,6 +1,13 @@
 # ChangeLog for app-text/asciidoc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.38 2008/01/25 19:33:30 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.39 2008/06/16 15:50:06 leonardop Exp $
+
+*asciidoc-8.2.6 (16 Jun 2008)
+
+  16 Jun 2008; Leonardo Boshell <leonardop@gentoo.org>
+  -asciidoc-7.1.2.ebuild, +asciidoc-8.2.6.ebuild:
+  Version bump. Added 'vim-syntax' flag (thanks to Vaclav Slavik for the
+  patch on bug #190702).
 
   25 Jan 2008; Fabian Groffen <grobian@gentoo.org> asciidoc-7.0.4.ebuild,
   asciidoc-7.1.2.ebuild, asciidoc-8.1.0.ebuild:
